# tjrightdirection

./: .gitignore  .isort.cfg  .travis.yml  Makefile  Pipfile  manage.py  pyproject.toml  pytest.ini  requirements.txt
contact/: forms.py  urls.py  views.py
contact/static/css/: contact.css
contact/templates/contact/: base.html  contact.html  failure.html  success.html
contact/tests/test_views/: test_contact.py  test_submission_response.py
deploy_tools/: fabfile.py  gunicorn-systemd.template.service  local_settings.py  nginx.template.conf  provisioning_notes.md
deploy_tools/scripts/: restart.sh  start.sh  update.sh
gallery/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
gallery/migrations/: 0001_initial.py  0002_auto_20170217_1809.py  0003_auto_20170217_1829.py  0004_auto_20170217_1831.py
gallery/static/scripts/: gallery.js
gallery/templates/gallery/: gallery.html
gallery/tests/: conftest.py  test_models.py
hitcounter/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
hitcounter/migrations/: 0001_initial.py  0002_hitcounter_trip.py
hitcounter/templates/hitcounter/: hitcounter.html
recomendations/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
recomendations/migrations/: 0001_initial.py
recomendations/templates/recomendations/: recomendations.html
recomendations/tests/: conftest.py  test_models.py  test_views.py
tjhome/: __init__.py  apps.py  urls.py  views.py
tjhome/tests/: test_tjhome.py
tjrightdirection/: __init__.py  settings.py  urls.py  wsgi.py
(+3 files in other folders)
