[tool.poetry]
name = "tjrightdirection"
version = "0.1.0"
description = ""
authors = ["Luke Shiner <luke@lukeshiner.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
psycopg2 = "^2.8.4"
django-admin-sortable2 = "^0.7.6"
pillow = "^7.1.1"
gunicorn = "^20.0.4"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-django = "^3.8.0"
pytest-cov = "^2.8.1"
coveralls = "^1.10.0"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
isort = "^4.3.21"
pytest-factoryboy = "^2.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
