[tool.poetry]
name = "tjrightdirection"
version = "0.1.0"
description = ""
authors = ["Luke Shiner <luke@lukeshiner.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "2.2.28"
psycopg2 = "^2.9.1"
django-admin-sortable2 = "^1.0"
Pillow = "^10.2.0"
gunicorn = "^20.1.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.1"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
